Update Gentelella Alela! _.html

--- a/Gentelella Alela! _.html
+++ b/Gentelella Alela! _.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0050)https://colorlib.com/polygon/gentelella/index.html -->
 <html lang="en" class=" "><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-
+hola
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
