--- a/vuetify/public/index.html
+++ b/vuetify/public/index.html
@@ -14,7 +14,7 @@
     <script src="https://unpkg.com/vue-chartjs/dist/vue-chartjs.min.js"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 
     <title><%= htmlWebpackPlugin.options.title %></title>
 
