--- a/vuetify/public/index.html
+++ b/vuetify/public/index.html
@@ -15,7 +15,10 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
-
+    <!-- These belongs to the HTML file where you want C3 to work - put these lines into your <head> tag -->
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.js"></script>
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/c3/0.4.11/c3.js"></script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.11/c3.css" rel="stylesheet" type="text/css">
     <title><%= htmlWebpackPlugin.options.title %></title>
 
   </head>
@@ -27,3 +30,4 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
